--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
 </head>
 
 <body>
+  <header>
+    <h1>Welcome to bus_mall!</h1>
+  </header>
+  <main>
+    <h2>Thank you for your opinion, you are important to us! </h2>
+    <p>Today you will see a series of three pictures on your screen. Please look over the images carefully. Once you have carefully looked over each image please click the image that you would most likely buy vs the other two choices. EX. If you would rather
+      buy option 1 over option 2 and option 3 then you would click the image for option 1.</br>
+      You will see the same image more than once. Continue to choose the best option of the three each time even if its a repeat choice. After making 25 choices the data collection is done and you will be locked out of choosing anymore images. </p>
+    <h3>Again, thank you for your time. </h3>
+  </main>
   <script src='app.js'></script>
 </body>
 
