--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
       buy option 1 over option 2 and option 3 then you would click the image for option 1.</br>
       You will see the same image more than once. Continue to choose the best option of the three each time even if its a repeat choice. After making 25 choices the data collection is done and you will be locked out of choosing anymore images. </p>
     <h3>Again, thank you for your time. </h3>
+    <h3>Please click on the image that you would be most likely to buy. You must click one image, and you must only click on the image graphic.</h3>
     <section id="itemChoices">
-      <h3>Please click on the image that you would be most likely to buy. You must click one image, and you must only click on the image graphic.</h3>
+      <button>Please click here to begin</button>
 
     </section>
   </main>
