--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h2>Thank you for your opinion you're important to us </h2>
 
     <h3>Please click on the image that you would be most likely to buy. You must click one image, and you must only click on the image graphic. After 25 choices your survey will end.</h3>
-    <button id="chartButton">Render Results</button>
+    <!-- <button id="chartButton">Render Results</button> -->
     <section id="itemChoices">
       <button>Click to Begin</button>
 
