--- a/index.html
+++ b/index.html
@@ -9,14 +9,13 @@
 </head>
 
 <body>
-  <header>
-    <h1>Welcome to bus_mall</h1>
-  </header>
-  <main>
-    <h2>Thank you for your opinion you're important to us </h2>
+  <div id="seattle"><img src="img/seattle.jpg" alt=""></div>
 
-    <h3>Please click on the image that you would be most likely to buy. You must click one image, and you must only click on the image graphic. After 25 choices your survey will end.</h3>
-    <!-- <button id="chartButton">Render Results</button> -->
+  <main>
+    <h1>Your opinion is important to us.</h1>
+
+    <h3>You are about to start our product survey. When the survey starts please click on the image that you would be most likely to buy. You must click one image. After 25 choices your survey will end.</h3>
+
     <section id="itemChoices">
       <button>Click to Begin</button>
 
