--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <link rel="stylesheet" href="reset.css">
   <link href="https://fonts.googleapis.com/css?family=News+Cycle" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <script src='https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.js'></script>
@@ -22,7 +23,9 @@
 
     </section>
   </main>
-  <canvas id="myChart" width="960" height="600"></canvas>
+  <div id="canvas">
+    <canvas id="myChart" width="960" height="600"></canvas>
+  </div>
   <script src='app.js'></script>
 </body>
 
