--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <div id="seattle"><img src="img/seattle.jpg" alt=""></div>
+  <div class="seattle"><img src="img/seattle.jpg" alt=""></div>
 
   <main>
     <h1>Your opinion is important to us.</h1>
@@ -19,7 +19,7 @@
     <h3>You are about to start our product survey. When the survey starts please click on the image that you would be most likely to buy. You must click one image. After 25 choices your survey will end.</h3>
 
     <section id="itemChoices">
-      <button>Click to Begin</button>
+      <button class="rotateButton">Click to Begin</button>
 
     </section>
   </main>
